Code coverage verhoogd.